[gd_scene load_steps=6 format=3 uid="uid://kfl1lpih04y4"]

[ext_resource type="Texture2D" uid="uid://cgr66544q8oom" path="res://assets/characters/tails/tails.png" id="1_ptmoy"]
[ext_resource type="Texture2D" uid="uid://s2jnusjwtgfc" path="res://assets/characters/sonic/idle-Sheet 64x64.png" id="1_wk3ts"]
[ext_resource type="Script" uid="uid://datbjdabifc1m" path="res://scripts/ui/character_selection.gd" id="1_ydj5l"]
[ext_resource type="Texture2D" uid="uid://bquylcbr68xgq" path="res://assets/characters/knucles/knucklesSprite.png" id="2_j6qxg"]
[ext_resource type="Script" uid="uid://bqdsolk44wdgb" path="res://scripts/ui/volver.gd" id="5_7nuc1"]

[node name="Character_Selection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ydj5l")

[node name="Tails" type="Sprite2D" parent="."]
position = Vector2(515, 363)
texture = ExtResource("1_ptmoy")
hframes = 10
vframes = 23
frame = 2

[node name="TextEdit3" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 495.0
offset_top = 391.0
offset_right = 553.0
offset_bottom = 426.0
text = "Tails"
editable = false

[node name="Tails_Selection" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 490.0
offset_top = 339.0
offset_right = 564.0
offset_bottom = 429.0

[node name="Knuckles" type="Sprite2D" parent="."]
position = Vector2(654, 150.5)
texture = ExtResource("2_j6qxg")
hframes = 14
vframes = 5

[node name="TextEdit2" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 615.0
offset_top = 204.5
offset_right = 699.0
offset_bottom = 239.5
text = "Knuckles"
editable = false

[node name="Knuckles_Selection" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 616.0
offset_top = 133.5
offset_right = 699.0
offset_bottom = 250.5
mouse_default_cursor_shape = 2

[node name="Sonic" type="Sprite2D" parent="."]
position = Vector2(423, 190)
texture = ExtResource("1_wk3ts")
hframes = 2
vframes = 2

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 396.0
offset_top = 211.0
offset_right = 454.0
offset_bottom = 246.0
text = "SONIC"
editable = false

[node name="Sonic_Selection" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 382.0
offset_top = 135.0
offset_right = 464.0
offset_bottom = 267.0

[node name="Volver" type="Button" parent="."]
layout_mode = 0
offset_left = 173.0
offset_top = 102.0
offset_right = 222.0
offset_bottom = 133.0
text = "Atras"
script = ExtResource("5_7nuc1")

[connection signal="pressed" from="Tails_Selection" to="." method="_on_tails_selection_pressed"]
[connection signal="pressed" from="Knuckles_Selection" to="." method="_on_knuckles_selection_pressed"]
[connection signal="pressed" from="Sonic_Selection" to="." method="_on_sonic_selection_pressed"]
[connection signal="pressed" from="Volver" to="Volver" method="_on_pressed"]
